--- a/react-nadiia-start/src/componets/Navbar/Navbar.module.css
+++ b/react-nadiia-start/src/componets/Navbar/Navbar.module.css
@@ -1,12 +1,14 @@
 .nav{
     grid-area: n;
     background-color: rgba(223, 238, 14, 0.849);
+    padding: 20px;
   
   
   }
   .item {
-      color:rgba(66, 9, 156, 0.849)
+      color:rgba(66, 9, 156, 0.849);
+      text-decoration: none;
   }
-  .item.active {
+  .item a.activeLink {
       color: rgb(12, 10, 1);
   }
