--- a/react-nadiia-start/src/componets/Header/Header.module.css
+++ b/react-nadiia-start/src/componets/Header/Header.module.css
@@ -6,4 +6,11 @@
       width: 20px;
     
     }
+    .loginBlock {
+      float:right;
+    }
+    .loginBlock a{
+      color:aliceblue;
+
+    }
     
