--- a/react-nadiia-start/src/Сomponets/Dialogs/Dialogs.module.css
+++ b/react-nadiia-start/src/Сomponets/Dialogs/Dialogs.module.css
@@ -1,15 +1,15 @@
-.dialogs{
-display: grid;
-grid-template-columns: 2fr 10fr;
+.dialogsWrap {
+	display: grid;
+	grid-template-columns: 2fr 10fr;
+}
 
+.dialogsItem {
+	padding-left: 10px;
+	border-right: 3px solid sienna;
 }
-.dialogsItems {
-    padding: 10px;
 
-}
-.dialogsItems .active {
-    color:rgb(10, 78, 19)
-}
-.messages{
-padding: 10px;
+.messages {
+	padding: 10px;
+	display: flex;
+	flex-direction: column;
 }
