update profile, users,common,hoc

--- a/react-nadiia-start/src/Сomponets/Header/Header.module.css
+++ b/react-nadiia-start/src/Сomponets/Header/Header.module.css
@@ -1,16 +1,18 @@
-.header{
-    grid-area: h;
-    background-color: rgb(14, 193, 238);
-    }
-    .header img {
-      width: 20px;
-    
-    }
-    .loginBlock {
-      float:right;
-    }
-    .loginBlock a{
-      color:aliceblue;
+.header {
+	grid-area: h;
+	background-color: rgb(168, 150, 150);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+}
 
-    }
+.loginBlock a {
+	color: black;
+	text-decoration: none;
+}
+.loginBlock a:hover {
+	color: white;
+	text-decoration: none;
+}
     
