--- a/react-nadiia-start/src/Сomponets/Profile/Profile.module.css
+++ b/react-nadiia-start/src/Сomponets/Profile/Profile.module.css
@@ -1,3 +1,15 @@
+.profileWrap {
+	display: flex;
+	flex-direction: column;
+}
 
+.profileWrap div:nth-child(1) {
+	display: flex;
+}
+
+.profileWrap img {
+	width: 300px;
+	height: 200px;
+}
   
  
