--- a/react-nadiia-start/src/Сomponets/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/react-nadiia-start/src/Сomponets/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,10 +1,54 @@
-.image {
-    height: 10px;
-    width: 1200px;
-  }
-  .descriptionBlock{
-      padding: 10px;
-  }
-  .mainPhoto{
-      min-width: 200px;
-  }
+.profileInfo {
+	display: flex;
+	flex-direction: column;
+}
+.avatar {
+	padding: 10px;
+}
+
+.avatar {
+	padding: 10px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.avatar img {
+	width: 300px;
+    height: 200px;
+}
+
+.statusInfo {	
+	display: flex;
+	flex-direction: column;
+	padding-top: 10px;
+}
+
+.statusInfo div  {
+	color: aqua;
+	padding-top: 10px;
+}
+.contactsSpan {
+	padding: 15px;
+}
+.contactsWrapper {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	padding: 15px;
+}
+.contactsWrapper li {
+	padding: 5px;
+	list-style-type: none;
+	text-decoration: none;
+	color: aqua;
+}
+.contactsWrapper li b a {
+	text-decoration: none;
+	color: aqua;
+}
+
+.formGlobalError {
+    border: 2px solid red;
+    padding: 5px;
+    color: red;
+}
