--- a/react-nadiia-start/src/Сomponets/Profile/MyPosts/Post/Post.module.css
+++ b/react-nadiia-start/src/Сomponets/Profile/MyPosts/Post/Post.module.css
@@ -1,9 +1,35 @@
-.item {
-    color:rgba(238, 40, 14, 0.849)
-  }
-  .item img {
-    width: 50px;
-    height: 50px;
-    border-radius: 30px;
-    background-color: rgb(21, 247, 236);
-  }
+.postWrap {
+
+}
+
+.post {
+	flex-direction: column;
+	color: black;
+	margin-bottom: 20px;
+}
+
+.post.active {
+	color: gold;
+}
+.post img {
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+}
+
+.likeDislikeBlock {
+	display: flex;
+	flex-direction: row;
+}
+
+.like,
+.dislike {
+	display: flex;
+	flex-direction: row;
+}
+
+.like a,
+.dislike a{
+	color: black;
+	text-decoration: none;
+}
