--- a/react-nadiia-start/src/Сomponets/Users/users-module.css
+++ b/react-nadiia-start/src/Сomponets/Users/users-module.css
@@ -1,4 +1,5 @@
-.userPhoto {
-    width: 100px;
-    height: 100px;
+.users__immageWrapp img {
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
 }
